# maxbridge

./: .gitignore  CHANGELOG.md  LAUNCH.md  LICENSE  README.md  SECURITY.md  index.html  install-maxbridge.md  install.sh  package.json  tsconfig.json
docs/: design-brief-landing-page.md  design-brief-onboarding-wizard.md  marsirius-site-banner.html  spec-license-gate.md  spec-stripe-checkout.md  spec-tauri-bundle.md
scripts/: README.md  _lib.sh  build-bundle.sh  build-signed.sh  ci-github-actions-release.yml  dev-rebuild-watch.sh  preflight.sh  publish-release.sh  sign-and-notarize.sh  sign-setup.sh  tauri-conf-patch.md  verify-release.sh
server/: cli-probe.ts  config.ts  index.ts  local-oauth-bridge.ts  openai-compat.ts  proxy.ts  types.ts  upstream.ts
server/integrations/: openclaw.ts
server/license/: auto-trial.ts  client.ts  gate.ts  index.ts  jwt.ts  online-poller.ts  pubkey.pem  routes.ts  store.ts
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json  tauri.conf.json.bak-before-unsigned-build
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  main.rs.bak-before-unsigned-build
styles/: landing.css
tests/: local-messages.test.ts  max-session.test.ts  openai-compat.test.ts  proxy.test.ts  upstream.test.ts  wizard-state.test.ts
tests/license/: auto-trial.test.ts  gate.test.ts  online-poller.test.ts
worker/: package.json  tsconfig.json  wrangler.toml
worker/public/: index.html  install-released.sh
worker/scripts/: deploy.sh  gen-keypair.mjs
worker/src/: email.ts  index.ts  install-sh.ts  jwt.ts  kv.ts  md-template.ts  stripe.ts
(+6 files in other folders)
