[package]
name = "localclaw"
version = "0.1.0-alpha.1"
description = "LocalClaw desktop shell"
authors = ["OpenClaw"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

[features]
default = []
